[gd_scene load_steps=31 format=3 uid="uid://cbwnw66tib2sb"]

[ext_resource type="Texture2D" uid="uid://cpwirfcwfkpcy" path="res://assets/png/bomber-Sheet.png" id="1_3bg2y"]
[ext_resource type="Script" path="res://scripts/enemies/state_machines/bomber_state_machine.gd" id="2_o2fni"]
[ext_resource type="Script" path="res://scripts/enemies/states/idle.gd" id="2_s4fbc"]
[ext_resource type="Script" path="res://scripts/enemies/states/track.gd" id="3_7ls2f"]
[ext_resource type="Script" path="res://scripts/enemies/attacks/bomber_attack.gd" id="5_frlv8"]
[ext_resource type="Script" path="res://scripts/enemies/states/knocked_back.gd" id="6_vwchi"]
[ext_resource type="PackedScene" uid="uid://b6wdlj0183mmi" path="res://scenes/componenets/reflection_component.tscn" id="7_cg5sm"]
[ext_resource type="PackedScene" uid="uid://bmkrvevual04s" path="res://scenes/componenets/health_component.tscn" id="8_rafxc"]
[ext_resource type="PackedScene" uid="uid://cohr7yk3m5ban" path="res://scenes/componenets/hurtbox_component.tscn" id="9_brddd"]

[sub_resource type="Animation" id="Animation_u8b2o"]
resource_name = "Attack_down_left"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [66, 83]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../StateMachine/Attack/AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.3, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_vpll2"]
resource_name = "Attack_down_right"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [48, 65]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../StateMachine/Attack/AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.3, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_b8inu"]
resource_name = "Attack_insta"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [79, 83]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../StateMachine/Attack/AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_6na3t"]
resource_name = "Attack_up_left"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [102, 119]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../StateMachine/Attack/AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.3, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_iqiq7"]
resource_name = "Attack_up_right"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [84, 101]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../StateMachine/Attack/AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.3, 1.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_1jrft"]
resource_name = "Dead_1"
length = 0.1
step = 0.01

[sub_resource type="Animation" id="Animation_f0qt8"]
resource_name = "Idle_down_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4, 7]
}

[sub_resource type="Animation" id="Animation_i7s5d"]
resource_name = "Idle_down_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="Animation" id="Animation_d2has"]
resource_name = "Idle_up_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [12, 15]
}

[sub_resource type="Animation" id="Animation_xi8nh"]
resource_name = "Idle_up_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [8, 11]
}

[sub_resource type="Animation" id="Animation_apflx"]
resource_name = "Run_down_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [24, 31]
}

[sub_resource type="Animation" id="Animation_iymfs"]
resource_name = "Run_down_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [16, 23]
}

[sub_resource type="Animation" id="Animation_3gat0"]
resource_name = "Run_up_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [40, 47]
}

[sub_resource type="Animation" id="Animation_wcspw"]
resource_name = "Run_up_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [32, 39]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_du8fy"]
_data = {
"Attack_down_left": SubResource("Animation_u8b2o"),
"Attack_down_right": SubResource("Animation_vpll2"),
"Attack_insta": SubResource("Animation_b8inu"),
"Attack_up_left": SubResource("Animation_6na3t"),
"Attack_up_right": SubResource("Animation_iqiq7"),
"Dead_1": SubResource("Animation_1jrft"),
"Idle_down_left": SubResource("Animation_f0qt8"),
"Idle_down_right": SubResource("Animation_i7s5d"),
"Idle_up_left": SubResource("Animation_d2has"),
"Idle_up_right": SubResource("Animation_xi8nh"),
"Run_down_left": SubResource("Animation_apflx"),
"Run_down_right": SubResource("Animation_iymfs"),
"Run_up_left": SubResource("Animation_3gat0"),
"Run_up_right": SubResource("Animation_wcspw")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_b5dm6"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_knnf7"]
radius = 137.004

[sub_resource type="CircleShape2D" id="CircleShape2D_0ufsb"]
radius = 277.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jbqi6"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b12qt"]
radius = 29.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pcgyo"]
radius = 6.0
height = 20.0

[node name="bomber" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 3

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3bg2y")
hframes = 120
frame = 83

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_du8fy")
}

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_b5dm6")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="ReNavTimer" type="Timer" parent="NavigationAgent2D"]

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("animation_player")]
visible = false
script = ExtResource("2_o2fni")
animation_player = NodePath("../Sprite2D/AnimationPlayer")
initial_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("animation_player", "character")]
script = ExtResource("2_s4fbc")
animation_player = NodePath("../../Sprite2D/AnimationPlayer")
character = NodePath("../..")

[node name="Track" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("animation_player", "character")]
visible = false
script = ExtResource("3_7ls2f")
RE_NAV_TIME = 0.1
SPEED = 120
animation_player = NodePath("../../Sprite2D/AnimationPlayer")
character = NodePath("../..")

[node name="AggroRadius" type="Area2D" parent="StateMachine/Track"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StateMachine/Track/AggroRadius"]
shape = SubResource("CircleShape2D_knnf7")

[node name="TrackingRadius" type="Area2D" parent="StateMachine/Track"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StateMachine/Track/TrackingRadius"]
shape = SubResource("CircleShape2D_0ufsb")

[node name="Attack" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("animation_player", "character")]
script = ExtResource("5_frlv8")
animation_player = NodePath("../../Sprite2D/AnimationPlayer")
character = NodePath("../..")

[node name="AttackRadius" type="Area2D" parent="StateMachine/Attack"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StateMachine/Attack/AttackRadius"]
rotation = 1.5708
shape = SubResource("CircleShape2D_jbqi6")

[node name="AttackBox" type="Area2D" parent="StateMachine/Attack"]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="StateMachine/Attack/AttackBox"]
shape = SubResource("CircleShape2D_b12qt")
disabled = true

[node name="KnockedBack" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("character")]
script = ExtResource("6_vwchi")
character = NodePath("../..")

[node name="KnockBackTimer" type="Timer" parent="StateMachine/KnockedBack"]
one_shot = true

[node name="ReflectionComponent" parent="." node_paths=PackedStringArray("sprite_to_reflect") instance=ExtResource("7_cg5sm")]
position = Vector2(0, 16)
texture = ExtResource("1_3bg2y")
hframes = 120
sprite_to_reflect = NodePath("../Sprite2D")

[node name="HealthComponent" parent="." instance=ExtResource("8_rafxc")]
max_health = 2.0

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") groups=["enemy_hurtbox"] instance=ExtResource("9_brddd")]
collision_layer = 4
collision_mask = 0
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -2)
shape = SubResource("CapsuleShape2D_pcgyo")

[connection signal="died" from="HealthComponent" to="StateMachine" method="_on_health_component_died"]
